# DBS-project

./: .gitignore  DBS_Mini_Project_Report.docx  README.md  app.py  config.py  db.py  pyproject.toml  schema.sql
blueprints/auth/: routes.py
blueprints/student/: routes.py
blueprints/teacher/: routes.py
static/css/: style.css
templates/: base.html  login.html  register.html
templates/student/: dashboard.html  result.html  take_quiz.html
templates/teacher/: add_question.html  create_quiz.html  create_subject.html  dashboard.html  results.html
